--- a/styleheb.css
+++ b/styleheb.css
@@ -1,7 +1,7 @@
 
 html {
     background: #333;
-    font-family: Arial, sans-serif;
+    font-family: veranda, sans-serif;
 }
 body {
     background: white;
